# daily_digest

./: .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile  Dockerfile.lean  README.md  docker-compose.yml  main.py  pyproject.toml  run.ps1  run.sh  run_daily_digest.sh  run_on_linux.sh
app/: main.py  state.py
app/routes/: audio.py  practice.py  videos.py
app/static/: app.js  index.html  style.css
src/: audio_slicer.py  chunker.py  cli.py  comparator.py  fetcher.py  mailer.py  summarizer.py  transcriber.py
