[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-digest"
version = "0.1.0"
description = "A CLI tool to fetch, transcribe, summarize, and email Pivot Talk videos"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.07.0",
    "openai>=1.40.0",
    "resend>=2.3.0",
    "python-dotenv>=1.0.0",
    "openai-whisper",
]

[project.scripts]
daily-digest = "main:main"